@@ -36,6 +36,7 @@ const
   COLORSELECTORGAP=12;
   TOGGLEBUTTONSLEFT=INKBUTTONSLEFT+2*(NORMALBUTTONWIDTH+3);
   TOGGLEBUTTONSTOP=6;
+
   MAXPALETTEENTRIES=2048;  // Palette color count hard limit
   POSTPROCESSCOLOR=$FFF0;
 
@@ -54,6 +55,7 @@ const
   MSG_UNDO=7;
   MSG_REDO=8;
   MSG_SETUNDOREDOBUTTON=9;
+  MSG_ACTIVATEPALETTEEDITOR=10;
 
 
 var
