@@ -20,8 +20,8 @@ PutCEL=53
 
 [DrawArea]
 Zoom=3
-ZoomLeft=0
-ZoomTop=34
+ZoomLeft=-23
+ZoomTop=57
 
 [BasicControls]
 Tool0=DRAW
